    - On platforms with no working mmap() equivalent, don't warn the
      user when cached-routers doesn't exist.
    - Warn the user when mmap() [or its equivalent] fails for some reason
      other than file-not-found.
    - Don't warn the user when cached-routers.new doesn't exist: that's
      perfectly fine when starting up for the first time.

  o Minor features:
    - Warn the user when an application uses the obsolete binary v0
      control protocol.  We're planning to remove support for it during
      the next development series, so it's good to give people some
      advance warning.
    - Remove some never-implemented options.  Mark PathlenCoinWeight as
      obsolete.
    - Implement proposal 106: Stop requiring clients to have well-formed
      certificates; stop checking nicknames in certificates.  (Clients have
      certificates so that they can look like Tor servers, but in the future
      we might want to allow them to look like regular TLS clients instead.
      Nicknames in certificates serve no purpose other than making our
      protocol easier to recognize on the wire.)
    - Revise messages on handshake failure again to be even more clear about
      which are incoming connections and which are outgoing.


Changes in version 0.1.2.7-alpha - 2007-02-06
  o Major bugfixes (rate limiting):
    - Servers decline directory requests much more aggressively when
      they're low on bandwidth. Otherwise they end up queueing more and
      more directory responses, which can't be good for latency.
    - But never refuse directory requests from local addresses.
    - Fix a memory leak when sending a 503 response for a networkstatus
      request.
    - Be willing to read or write on local connections (e.g. controller
      connections) even when the global rate limiting buckets are empty.
    - If our system clock jumps back in time, don't publish a negative
      uptime in the descriptor. Also, don't let the global rate limiting